--- a/buy.html
+++ b/buy.html
@@ -27,6 +27,8 @@
  
  <form>
     <label for="yname">expirery date</label><br>
+
+   <a href=_url">https://waxman044.github.io/cryptozooremix/</a>
     <input type="text" id="yname" name="yname"><br>
     <input type="submit" value="Submit">
  
