--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <label for="yname">expirery date</label><br>
     <input type="text" id="yname" name="yname"><br>
     <input type="submit" value="Submit">
-
+ </form>
+    
     <a href=_url">https://waxman044.github.io/cryptozooremix/</a>
  
   </body>
