--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <body>
   <h1>buying cryto zoo egg hatch</h1>
   <h5>Price $100,000USD</h5>
-  
+    <h6> return to hatch</h6>
+  <a href=_url">https://waxman044.github.io/cryptozooremix/</a>
   <form>
     <label for="yname">name on card</label><br>
     <input type="text" id="yname" name="yname"><br>
@@ -30,8 +31,6 @@
     <input type="text" id="yname" name="yname"><br>
     <input type="submit" value="Submit">
  </form>
-    
-    <a href=_url">https://waxman044.github.io/cryptozooremix/</a>
  
   </body>
   </html>
